<?xml version="1.0"?>
<package format="3">
  <name>bdx_msgs</name>
  <version>0.0.1</version>
  <description>A ROS 2 package containing custom message types</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
